# Mandelbrot

./: CMakeLists.txt  Fragment.glsl  Vertex.glsl  shaders.qrc
headers/: MainWindow.h  Mandelbrot.h  OutputWidget.h
src/: MainWindow.cpp  Mandelbrot.cpp  OutputWidget.cpp  main.cpp
